cmake_minimum_required(VERSION 3.10)
project(argz_project)
set(VERSION_MAJOR 1)
set(VERSION_MINOR 0)
set(VERSION_PATCH 0)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_library(argz INTERFACE)
set(ARGZ_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(argz INTERFACE ${ARGZ_INCLUDE_DIR})
install(FILES ${ARGZ_INCLUDE_DIR}/argz.hpp DESTINATION include)
add_executable(test_program test.cpp)
target_link_libraries(test_program PRIVATE argz)
